tests/ui/frontmatter/space-in-infostring.stderr
error: invalid infostring for frontmatter
  --> $DIR/space-in-infostring.rs:1:4
   |
LL | --- cargo clippy
   |    ^^^^^^^^^^^^^
   |
   = note: frontmatter infostrings must be a single identifier immediately following the opening

error: aborting due to 1 previous error

